--- a/web.yaml
+++ b/web.yaml
@@ -6,7 +6,7 @@
         name: httpd
         state: installed
     - name: configure
-      shell: "echo Hello Synechron !! > /var/www/html/index.html"
+      shell: "echo Hello Floyd you made it !! > /var/www/html/index.html"
     - name: start service
       service:
         name: httpd
